fix [#34107] Grease pencil crash after box select